# filarmoniya

./: .dockerignore  .gitignore  BACKEND_PLAN.md  CLAUDE.md  Dockerfile  GEMINI.md  docker-compose.yml  next.config.mjs  package-lock.json  package.json  view_image.html
backend/: .dockerignore  Dockerfile  db.sqlite3  dump.json  pyproject.toml
backend/apps/common/: chapter_parser.py  models.py  richtext.py  serializers.py  youtube.py  youtube_meta.py
backend/apps/core/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/core/migrations/: 0001_initial.py  (+1 more)
backend/apps/documents/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/events/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/international/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/media_app/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/news/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/apps/pages/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/people/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/teams/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/config/: api_urls.py  settings.py  urls.py
backend/scripts/: dump_frontend_data.mjs
backend/seed_data/: about.js  afisha.js  footer.js  international.js  management.js  navigation.js  news.js  openData.js  statute.js  videos.js  youthPolitics.js
(+142 files in other folders)
